# glx_lib.cpp

./: CMakeLists.txt  LICENSE  README.md  a.out  dart_cpp.cpp  readme.md  test.cpp
.github/: FUNDING.yml
lib/: glx_lib.hpp
lib/convert/: convert.hpp  json.hpp  test.cpp
lib/core/: core.hpp  dynamic.hpp  list.hpp  map.hpp  num.hpp  print.hpp  string.hpp
lib/json/: json.hpp
